# merlin

./: CHANGELOG.md  Makefile  bad_spec.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: push-pr_workflow.yml
merlin/: celery.py  log_formatter.py  main.py
merlin/common/: opennpylib.py
merlin/config/: __init__.py  broker.py  configfile.py
merlin/examples/workflows/null_spec/: master_script.py  plot.py  script.py  submit1.sbatch
merlin/examples/workflows/null_spec/scripts/: aggregate_output.sh  launch_jobs.py  my_data11.yaml  my_data12.yaml  my_data13.yaml  my_data14.yaml  my_data15.yaml  my_data20.yaml  my_data21.yaml  my_data22.yaml  my_data23.yaml  my_data24.yaml  my_data25.yaml  my_data27.yaml  my_data28.yaml  my_data31.yaml  my_data32.yaml  my_data33.yaml  my_data34.yaml  my_data35.yaml  my_data36.yaml  my_data37.yaml  my_data39.yaml  my_data4.yaml  my_data40.yaml  my_data41.yaml  my_data45.yaml  my_data5.yaml  my_data57.yaml  my_data6.yaml  my_data7.yaml  plot-many-datasets.ipynb  plot-single-dataset.ipynb  read_output.py  submit_2_node.sbatch  submit_queue_tasks.sbatch
merlin/spec/: specification.py
merlin/study/: study.py
requirements/: release.txt
